# django-cursor-pagination

./: CHANGELOG.md  README.md  cursor_pagination.py  docker-compose.yml  pyproject.toml  runtests.py  setup.py
tests/: settings.py  tests.py
