[tool.poetry]
name = "django-cursor-pagination"
version = "0.1.0"
description = ""
authors = ["Myers Carpenter <myers@maski.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
psycopg = {extras = ["binary"], version = "^3.1.17"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
