[tool.poetry]
name = "django-cursor-pagination"
version = "0.2.1"
description = "Cursor based pagination for Django"
authors = []
readme = "README.md"
license = "BSD"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "cursor_pagination.py" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
django = "^5.0.1"
psycopg = { extras = ["binary"], version = "^3.1.17" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
